added code to refer and be referred

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,20 @@
   <%= @user.phone_number %>
 </p>
 
+<p>
+  <strong>Referrer:</strong>
+  <%= @user.referrer %>
+</p>
+
+<p>
+  <strong>Referrals:</strong>
+  <%= @user.referrals %>
+</p>
+
+<%= form_for @relationship do %>
+  <%= hidden_field_tag :referral_id, @user.id %>
+  <%= submit_tag "Refer" %>
+<% end %>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
