fixing mixed ids error

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
         <%= submit_tag "Referred" %>
     <% else %>
         <%= form_for @relationship do %>
-            <%= hidden_field_tag :referral_id, @user.id %>
+            <%=  @user.id %>
             <%= submit_tag "Refer" %>
         <% end %>
     <% end %>
