relationship association to commission

--- a/app/views/commissions/_form.html.erb
+++ b/app/views/commissions/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :commission_rate %><br>
-    <%= f.text_field :commission_rate %>
+    <%= f.text_field :commission_rate, readonly: true %>
   </div>
   <div class="field">
     <%= f.label :load_amount %><br>
