--- a/app/views/wallets/_form.html.erb
+++ b/app/views/wallets/_form.html.erb
@@ -1,21 +1,23 @@
-<%= form_for(@wallet) do |f| %>
-  <% if @wallet.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@wallet.errors.count, "error") %> prohibited this wallet from being saved:</h2>
+  <% if current_user %>
+  <%= form_for(@wallet) do |f| %>
+    <% if @wallet.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@wallet.errors.count, "error") %> prohibited this wallet from being saved:</h2>
 
-      <ul>
-      <% @wallet.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @wallet.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :load_amount %><br>
+      <%= f.text_field :load_amount %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Load Wallet"%>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :load_amount %><br>
-    <%= f.text_field :load_amount %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Load Wallet"%>
-  </div>
 <% end %>
