--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Load amount</th>
       <th>Transaction Time</th>
+      <th>User ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +15,9 @@
   <tbody>
     <% @wallets.each do |wallet| %>
       <tr>
-        <td><%= wallet.load_amount %></td>
+        <td><%= print_price(wallet.load_amount) %></td>
         <td><%= time_ago_in_words(wallet.created_at) %> ago</td>
+        <td><%= wallet.user_id %></td>
 
         <td><%= link_to 'Show', wallet %></td>
       </tr>
